--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,164 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --cor1: #335384;
+  --cor2: #5BA7D1;
+  --cor3: #444440;
+  --cor4: #000000;
+  --cor5: #FFFFFF;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Assistant&family=Source+Sans+Pro&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+a {
+  color: #FFFFFF;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+a:hover {
+  opacity: 0.7;
+}
+
+.logo {
+  font-family: ARIAL;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+nav {
+  position: fixed;
+  z-index: 2;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: Assistant;
+  height: 8vh;
+  width: 100vw;
+  background-color: var(--cor1);
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+}
+
+.nav-list li {
+  letter-spacing: 3px;
+  margin-left: 32px;
+}
+
+.capa {
+  width: 100vw;
+  height: 92vh;
+  background-color: var(--cor2);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  align-items: center;
+  color: var(--cor5);
+  font-family: Source Sans Pro;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 70px;
+}
+
+.botao1{
+  margin-left: 50px;
+  width: 200px;
+  height: 80px;
+  font-family: Assistant;
+  font-size: 20px;
+  Color: var(--cor5);
+  background-color: var(--cor2);
+  border-radius: 25px;
+  letter-spacing: 3px;
+  border: 4px solid var(--cor5);
+  cursor: pointer;
+}
+
+.botao1:hover {
+  transition:0.2s;
+  width: 220px;
+  height: 90px;
+  font-size: 22px;
+}
+
+.sobremim{
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: space-around;
+}
+
+h2{
+  text-align: center;
+  margin-top: 4vh;
+  font-family: Assistant;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: var(--cor1);
+}
+
+.texto {
+  margin-top: 4vh;
+  position: relative;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 7vh;
+}
+
+h3{
+  text-align: justify;
+  font-family: Source Sans Pro;
+}
+
+@media (max-width: 900px) {
+  nav {
+    display: grid;
+    height: 16vh;
+  }
+
+  .logo {
+    margin-top: 1vh;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .nav-list {
+    text-align: center;
+    margin-bottom: 1vh;
+  }
+
+  .capa{
+    height: 100vh;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  h1{
+    margin-top: 16vh;
+    width: 350px;
+  }
+
+  .botao1{
+    margin-bottom: 8vh;;
+    margin-left: 0;
+  }
+
+  .texto {
+    width: 400px;
+  }
 }
