--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 a {
@@ -88,6 +89,44 @@ h1 {
   cursor: pointer;
 }
 
+.botao2{
+  margin-left: 50px;
+  width: 200px;
+  height: 80px;
+  font-family: Assistant;
+  font-size: 20px;
+  Color: var(--cor1);
+  background-color: var(--cor5);
+  border-radius: 25px;
+  letter-spacing: 3px;
+  border: 4px solid var(--cor1);
+  cursor: pointer;
+  margin-top: 6vh;
+  margin-bottom: 4vh;
+}
+
+#um, #dois, #tres, #quatro{
+  position: absolute;
+  width: 200px;
+  height: 1px;
+}
+
+#um {
+  top: 85vh;
+}
+
+#dois {
+  top: 225vh;
+}
+
+#tres {
+  top: 303vh;
+}
+
+#quatro {
+  top: 350vh;
+}
+
 .botao1:hover {
   transition:0.2s;
   width: 220px;
@@ -120,9 +159,48 @@ h2{
   margin-bottom: 7vh;
 }
 
-h3{
+img{
+  width: 800px;
+}
+
+h4{
   text-align: justify;
   font-family: Source Sans Pro;
+  color: var(--cor3)
+}
+
+h3 {
+  font-family: Assistant;
+  margin-top: 3vh;
+}
+
+.texto a{
+  color: var(--cor4);
+  text-decoration: none;
+  transition: 0.3s;
+  margin-right: 15px;
+}
+
+.texto1{
+  margin-top: 4vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 4vh;
+}
+
+.texto1 a{
+  color: var(--cor4);
+  justify-content: center;
+  align-items: center;
+}
+
+.box{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
 }
 
 @media (max-width: 900px) {
@@ -160,5 +238,25 @@ h3{
 
   .texto {
     width: 400px;
+  }
+  
+  img{
+    width: 400px;
+  }
+
+  #um{
+    top: 87vh;
+  }
+
+  #dois{
+    top: 188vh;
+  }
+
+  #tres{
+    top: 265vh;
+  }
+
+  #quatro{
+    top: 350vh;
   }
 }
